--- a/frametest/src/components/Album/styles.css
+++ b/frametest/src/components/Album/styles.css
@@ -18,6 +18,8 @@
   box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
   transition: 0.4s;
   border: none !important;
+  cursor: pointer;
+  
 }
 
 .card p{
@@ -40,17 +42,12 @@
 }
 
 .card:hover {
-  transform: scale(0.9, 0.9);
-  box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
-    -5px -5px 30px 15px rgba(0,0,0,0.22);
+  box-shadow: 5px 1px 20px 1px #ddd;
+  transform: scale(0.96);
 }
 
 .title-white {
   color: white;
-}
-
-.title-black {
-  color: black;
 }
 
 .textDiv{
@@ -59,11 +56,5 @@
   background-color: white;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
+  text-transform: capitalize;
 }
-
-/* @media all and (max-width: 500px) {
-  .card-list {
-    flex-direction: column;
-  }
-
-} */
