--- a/frametest/src/components/Posts/styles.css
+++ b/frametest/src/components/Posts/styles.css
@@ -1,96 +1,73 @@
-.postContainer{
+.postContainer {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  flex:1 ;
+  flex: 1;
   flex-wrap: wrap;
 }
 
-/* .cards {
-  background-color: gold;
-  color: white;
-  border-radius: 4px;
-  margin: 1vw;
-  padding: 25px 25px 15px 25px;
+.post {
+  margin: 8em;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  width: 100%;
+  max-width: 35em;
+  background: white;
+  font-size: 12px;
+  box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.1),
+    -5px -5px 30px 7px rgba(0, 0, 0, 0.1);
   transition: 0.3s;
-  width: 25%;
-  height: 20vh;
 }
-.cards:hover {
+
+.post:hover {
   box-shadow: 5px 1px 20px 1px #ddd;
   transform: scale(0.96);
-} */
-
-/* End Non-Essential  */
-
-.property-card
-{
-  height:30em;
-  width:25em;
-  border-radius: 4px;
-  margin: 1vw;
-  display:-webkit-box;
-  display:-ms-flexbox;
-  display:flex;
-  flex-direction:column;
-  position:relative;
-  transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-  overflow:hidden;
-  box-shadow:  15px 15px 27px #e1e1e3, -15px -15px 27px #ffffff;
-  -webkit-box-orient:vertical;
-  -webkit-box-direction:normal;
-  -ms-flex-direction:column;
-  -webkit-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-  -o-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-  -webkit-box-shadow:  15px 15px 27px #e1e1e3, -15px -15px 27px #ffffff;
-}
-/* ^-- The margin bottom is necessary for the drop shadow otherwise it gets clipped in certain cases. */
-
-/* Top Half of card, image. */
-
-.property-image
-{
-  height:8em;
-  width:25em;
-  padding:1em 2em;
-  position:Absolute;
-  top:0px;
-  -webkit-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-  -o-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-  background-image:url('https://cdn.photographylife.com/wp-content/uploads/2017/01/What-is-landscape-photography.jpg');
-  background-size:cover;
-  background-repeat:no-repeat;
 }
 
-/* Bottom Card Section */
-
-.property-description
-{
-  background-color: #FAFAFC;
-  height:22em;
-  width:25em;
-  position:absolute;
-  bottom:0em;
-  -webkit-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-  -o-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-  padding: 0.5em 1em;
-  text-align:center;
+.post-header {
+  padding: 10px;
+  display: flex;
+  align-items: center;
 }
 
-/* Social Icons */
-
-
-/* Property Cards Hover States */
-
-.property-card:hover .property-description
-{
-  height:0em;
-  padding:0px 1em;
-}
-.property-card:hover .property-image
-{
-  height:18em;
+.post-header p {
+  margin: auto;
 }
 
+.post-content p {
+  text-align: justify;
+  margin-top: 16px;
+}
+
+.post-content hr {
+  border: none;
+  border-bottom: 1px solid #ccc;
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+
+.user-name {
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.time {
+  text-align: right;
+  width: 100%;
+  color: #ccc;
+}
+
+.post-content {
+  padding: 10px;
+}
+
+.title {
+  font-weight: bold;
+  text-transform: capitalize;
+}
+
+.hashtag {
+  color: #4a5279;
+  margin-right: 5px;
+  display: inline;
+}
